[package]
name    = "laspad"
version = "2.0.0-pre6"
authors = ["Las <las@protonmail.ch>"]
license = "GPLv3"
edition = "2018"
publish = false

[dependencies]
byteorder         = "1.2.7"
clap              = {version = "2.32"}
curl              = "0.4.18"
failure           = "0.1.1"
fern              = {version = "0.5.6", features = ["colored"]}
git2              = "0.7.5"
indoc             = "0.2.8"
lazy_static       = "1.2"
log               = "0.4.2"
regex             = "1.0.6"
serde             = "1.0.80"
serde_derive      = "1.0.80"
serde-xml-rs      = "0.2.1"
toml              = "0.4.8"
walkdir           = "2.2.6"
zip               = "0.4.2"

[build-dependencies]
curl              = "0.4.18"
